# GameEngineer

./: CMakeLists.txt
src/: CMakeLists.txt  GameEngineer.cpp  GameEngineer.h
src/core/: Constants.h  Core.cpp  Core.h  Globals.cpp  Globals.h
src/graphics/: Texture.cpp  Texture.h
src/math/: Position.cpp  Position.h  Rect.cpp  Rect.h  Vector2D.cpp  Vector2D.h
tests/: CMakeLists.txt  main-test.cpp  position-test.cpp  rect-test.cpp  vector-test.cpp
